--- a/app/src/main/res/drawable/lhc_sx_bg.xml
+++ b/app/src/main/res/drawable/lhc_sx_bg.xml
@@ -1,14 +1,12 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" >
+<?xml version="1.0" encoding="utf-8"?>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
 
-    <solid android:color="@color/app_main" />
-
-    <!--<corners android:radius="4dp" />-->
-
-    <!--<padding
-        android:bottom="3dp"
-        android:left="6dp"
-        android:right="6dp"
-        android:top="3dp" />-->
-
+    <!--圆角-->
+    <corners android:radius="50dp"></corners>
+    <!--渐变-->
+    <gradient
+        android:centerColor="#63cfc3"
+        android:endColor="#57c5e9"
+        android:startColor="#6fd99d"></gradient>
 </shape>
