--- a/app/src/main/res/layout/pick_column_lhc_num_digits.xml
+++ b/app/src/main/res/layout/pick_column_lhc_num_digits.xml
@@ -82,6 +82,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="24dp"
         android:layout_marginRight="24dp"
+        android:layout_marginTop="20dp"
         app:checkedDrawable="@drawable/bg_special_complete_circle_choose_ball"
         app:chooseMode="false"
         app:column="5"
