--- a/app/src/main/res/layout/pick_column_lhc_tail.xml
+++ b/app/src/main/res/layout/pick_column_lhc_tail.xml
@@ -8,6 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:layout_marginTop="30dp"
         android:paddingLeft="16dp">
         <com.goldenasia.lottery.pattern.LhcLayout
             android:id="@+id/layout0"
