--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -56,6 +56,8 @@
         <attr name="verticalGap" format="dimension"/>
         <attr name="numberStyle" format="boolean"/>
         <attr name="chooseMode" format="boolean"/>
+        <attr name="enabledLineClick" format="boolean"/>
+        <attr name="isColorful" format="boolean"/>
         <attr name="maxNumber" format="integer"/>
         <attr name="minNumber" format="integer"/>
         <attr name="column" format="integer"/>
@@ -182,39 +184,39 @@
     </declare-styleable>
 
     <declare-styleable name="TagCloudViewEdit">
-        <attr name="TCVEBackground" format="reference" />
-        <attr name="TCVESeclecTextColor" format="reference" />
-        <attr name="TCVETextColor" format="color" />
-        <attr name="TCVEBorder" format="dimension" />
-        <attr name="TCVETextSize" format="dimension" />
-        <attr name="TCVEBorderItem" format="dimension" />
-        <attr name="TCVEItemBorderVertical" format="dimension" />
-        <attr name="TCVEItemBorderHorizontal" format="dimension" />
-        <attr name="TCVESingleLine" format="boolean" />
-        <attr name="TCVEShowEndText" format="boolean" />
-        <attr name="TCVEShowRightImg" format="boolean" />
-        <attr name="TCVEEndText" format="string" />
-        <attr name="TCVERightResId" format="reference" />
-        <attr name="TCVECanTagClick" format="boolean" />
-        <attr name="TCVETagResId" format="reference" />
+        <attr name="TCVEBackground" format="reference"/>
+        <attr name="TCVESeclecTextColor" format="reference"/>
+        <attr name="TCVETextColor" format="color"/>
+        <attr name="TCVEBorder" format="dimension"/>
+        <attr name="TCVETextSize" format="dimension"/>
+        <attr name="TCVEBorderItem" format="dimension"/>
+        <attr name="TCVEItemBorderVertical" format="dimension"/>
+        <attr name="TCVEItemBorderHorizontal" format="dimension"/>
+        <attr name="TCVESingleLine" format="boolean"/>
+        <attr name="TCVEShowEndText" format="boolean"/>
+        <attr name="TCVEShowRightImg" format="boolean"/>
+        <attr name="TCVEEndText" format="string"/>
+        <attr name="TCVERightResId" format="reference"/>
+        <attr name="TCVECanTagClick" format="boolean"/>
+        <attr name="TCVETagResId" format="reference"/>
     </declare-styleable>
 
     <declare-styleable name="TagCloudView">
-        <attr name="tcvBackground" format="reference" />
-        <attr name="tcvSeclecTextColor" format="reference" />
-        <attr name="tcvTextColor" format="color" />
-        <attr name="tcvBorder" format="dimension" />
-        <attr name="tcvTextSize" format="dimension" />
-        <attr name="tcvBorderItem" format="dimension" />
-        <attr name="tcvItemBorderVertical" format="dimension" />
-        <attr name="tcvItemBorderHorizontal" format="dimension" />
-        <attr name="tcvSingleLine" format="boolean" />
-        <attr name="tcvShowEndText" format="boolean" />
-        <attr name="tcvShowRightImg" format="boolean" />
-        <attr name="tcvEndText" format="string" />
-        <attr name="tcvRightResId" format="reference" />
-        <attr name="tcvCanTagClick" format="boolean" />
-        <attr name="tcvTagResId" format="reference" />
+        <attr name="tcvBackground" format="reference"/>
+        <attr name="tcvSeclecTextColor" format="reference"/>
+        <attr name="tcvTextColor" format="color"/>
+        <attr name="tcvBorder" format="dimension"/>
+        <attr name="tcvTextSize" format="dimension"/>
+        <attr name="tcvBorderItem" format="dimension"/>
+        <attr name="tcvItemBorderVertical" format="dimension"/>
+        <attr name="tcvItemBorderHorizontal" format="dimension"/>
+        <attr name="tcvSingleLine" format="boolean"/>
+        <attr name="tcvShowEndText" format="boolean"/>
+        <attr name="tcvShowRightImg" format="boolean"/>
+        <attr name="tcvEndText" format="string"/>
+        <attr name="tcvRightResId" format="reference"/>
+        <attr name="tcvCanTagClick" format="boolean"/>
+        <attr name="tcvTagResId" format="reference"/>
     </declare-styleable>
     <!--生肖-->
     <declare-styleable name="LhcLayout">
@@ -228,21 +230,21 @@
         <attr name="example" format="string"/>
     </declare-styleable>
     <declare-styleable name="CircleImageView">
-        <attr name="border_width" format="dimension" />
-        <attr name="border_color" format="color" />
+        <attr name="border_width" format="dimension"/>
+        <attr name="border_color" format="color"/>
     </declare-styleable>
 
     <declare-styleable name="WheelView">
-        <attr name="unitHeight" format="dimension" />
+        <attr name="unitHeight" format="dimension"/>
         <attr name="itemNumber" format="integer"/>
 
-        <attr name="normalTextColor" format="color" />
-        <attr name="normalTextSize" format="dimension" />
-        <attr name="selectedTextColor" format="color" />
-        <attr name="selectedTextSize" format="dimension" />
+        <attr name="normalTextColor" format="color"/>
+        <attr name="normalTextSize" format="dimension"/>
+        <attr name="selectedTextColor" format="color"/>
+        <attr name="selectedTextSize" format="dimension"/>
 
-        <attr name="lineColor" format="color" />
-        <attr name="lineHeight" format="dimension" />
+        <attr name="lineColor" format="color"/>
+        <attr name="lineHeight" format="dimension"/>
 
         <attr name="maskHeight" format="dimension"/>
         <attr name="noEmpty" format="boolean"/>
