--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -22,4 +22,17 @@
   <item type="id" name="quit"/>
   <item type="id" name="restart_preview"/>
   <item type="id" name="return_scan_result"/>
+
+  <item type="id" name="layout_mouse"/>
+  <item type="id" name="layout_cow"/>
+  <item type="id" name="layout_tiger"/>
+  <item type="id" name="layout_rabbit"/>
+  <item type="id" name="layout_dragon"/>
+  <item type="id" name="layout_snake"/>
+  <item type="id" name="layout_horse"/>
+  <item type="id" name="layout_sheep"/>
+  <item type="id" name="layout_monkey"/>
+  <item type="id" name="layout_chicken"/>
+  <item type="id" name="layout_dog"/>
+  <item type="id" name="layout_pig"/>
 </resources>
