11选5限制选好最大个数

--- a/app/src/main/res/layout/pick_column_11xw_hzs.xml
+++ b/app/src/main/res/layout/pick_column_11xw_hzs.xml
@@ -80,6 +80,7 @@
         app:textColor="@color/app_main"
         app:textSize="18sp"
         app:uncheckedDrawable="@drawable/bg_special_complete_circle_defalut_ball"
-        app:verticalGap="10dp" />
+        app:verticalGap="10dp"
+        app:limitCount="11"/>
 
 </LinearLayout>
